src/objects/Technical_Article__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Technical articles that are intended to solve a problem</description>
    <fields>
        <fullName>CS_Article__c</fullName>
        <description>Body of the article</description>
        <label>Article</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CS_Associated_Articles__c</fullName>
        <label>Associated Articles</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CS_Associated_Cases__c</fullName>
        <description>Associated cases for legacy data</description>
        <label>Associated Cases</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CS_Associated_Jira__c</fullName>
        <description>Associated Jira Ids for legacy data</description>
        <label>Associated Jira</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CS_Attachment_1__c</fullName>
        <label>Attachment 1</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>CS_Attachment_2__c</fullName>
        <label>Attachment 2</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>CS_Attachment_3__c</fullName>
        <label>Attachment 3</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>CS_Content_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A field to store the person to contact w/ questions about the article.</description>
        <label>Content Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Technical_Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_Private_Attachment__c</fullName>
        <label>Private Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>CS_Publish_Status__c</fullName>
        <label>Publish Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_RightNow_Date_Created__c</fullName>
        <description>CS RightNow Date Created</description>
        <label>Date Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_RightNow_Date_Updated__c</fullName>
        <description>Right Now Updated Date</description>
        <label>Date Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_RightNow_ID__c</fullName>
        <label>RightNow ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_RightNow_Last_Edited_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RightNow Last Edited By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Technical_Articles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_RightNow_Publish_Date__c</fullName>
        <label>RightNow Publish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_Template__c</fullName>
        <formula>HYPERLINK(&apos;/servlet/servlet.FileDownload?file=015340000021twE&apos;, &apos;Click here for the Technical Article template &apos;, &apos;_blank&apos;)</formula>
        <label>Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <formula>HYPERLINK(&apos;/servlet/servlet.FileDownload?file=015340000021tw9&apos;, &apos;Click here for Technical Article instructions &apos;, &apos;_blank&apos;)</formula>
        <label>Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <picklist>
            <picklistValues>
                <fullName>BillingCenter 9.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BillingCenter 8.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BillingCenter 7.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BillingCenter 3.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BillingCenter 2.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BillingCenter 1.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting Extension for BillingCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter 9.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter 8.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter 7.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter 2.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter 1.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter 4.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter 3.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter 2.5.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting Extension for PolicyCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter 9.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter 8.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter 7.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter 6.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter 5.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter 4.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter 3.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter 2.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting Extension for ClaimCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ContactManager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DataHub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Portals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InfoCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Reporting</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Technical_Topic__c</fullName>
        <label>Technical Topic</label>
        <picklist>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Practices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Methodology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation/Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Technical Article</label>
    <pluralLabel>Technical Articles</pluralLabel>
</CustomObject>